--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,8 @@ dependencies:
   firebase_core: ^2.8.0
   cloud_firestore: ^4.4.5
 
+  flutter_slidable: ^2.0.0
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
