--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,7 +32,6 @@ dependencies:
     sdk: flutter
   simple_animations: ^1.3.3
 
-  lottie: ^2.3.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -86,6 +85,7 @@ flutter:
     - family: Raleway_Semibold
       fonts:
         - asset: Assets/fonts/Raleway-SemiBold.ttf
+        - asset: Assets/fonts/Raleway-Bold.ttf
   
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
