--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   cloud_firestore: ^4.4.5
 
   flutter_slidable: ^2.0.0
+  dropdown_formfield: ^0.1.4
 
 dev_dependencies:
   flutter_test:
