--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,7 +30,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  simple_animations: ^1.3.3
+  # simple_animations: ^1.3.3
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -42,7 +42,7 @@ dependencies:
   cloud_firestore: ^4.4.5
 
   flutter_slidable: ^2.0.0
-  dropdown_formfield: ^0.1.4
+  # dropdown_formfield: ^0.1.4
 
 dev_dependencies:
   flutter_test:
